modal created, alignment issue solved.

--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,19 @@ button {
 dialog::backdrop {
     background: hsla(50, 100%, 50%, 0.7);
 }
+
+dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    height: 200px;
+    width: 200px;
+    border: solid 5px #FCF;
+    padding: 1rem;
+}
+
+.modal-container {
+   
+}
